--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 html {
   scroll-behavior: smooth;
   overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
